tests/ui/macros/macro-inner-attributes.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `a`
  --> $DIR/macro-inner-attributes.rs:17:5
   |
LL |     a::bar();
   |     ^ use of unresolved module or unlinked crate `a`
   |
note: found an item that was configured out
  --> $DIR/macro-inner-attributes.rs:7:7
   |
LL | test!(a,
   |       ^
LL |       #[cfg(false)],
   |             ----- the item is gated here
help: there is a crate or module with a similar name
   |
LL -     a::bar();
LL +     b::bar();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
